Fix cropping of entity names in explorer

--- a/packages/app/src/explorer/Explorer.module.css
+++ b/packages/app/src/explorer/Explorer.module.css
@@ -64,6 +64,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  line-height: 1.5; /* fix cropping of ascenders and descenders  */
 }
 
 .spinner {
